# CAPSTONE_PROJECT

./: .gitignore  README.md  VIDEO_DEEP_SEARCH.md  VIDEO_DEEP_SEARCH_LITERATURE.md  capstone_diagrams.excalidraw  pyproject.toml  test.py
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/api/: chat.py  ingestion.py  socket.py  user.py
backend/app/core/: auth.py  config.py  dependencies.py  lifespan.py
backend/app/model/: chat_history.py  group.py  session_message.py  session_video.py  user.py  video.py
backend/app/schema/: chat.py  data_handle.py  group.py  user.py
backend/app/service/: agent.py  chat.py  minio.py  user.py
backend/app/tests/: test_data.py
backend/script/: path_discover.sh
backend/utils/: blocks.py  random_name.py
ingestion/: .env.docker  .gitignore  Dockerfile  docker-compose.yml  main.py  prefect.yaml  pyproject.toml  script_code.sh
ingestion/api/: health.py  management.py  upload.py
ingestion/core/: app_state.py  lifespan.py  storage.py
ingestion/core/artifact/: persist.py  schema.py
ingestion/core/clients/: autoshot_client.py  base.py  milvus_client.py
ingestion/core/config/: milvus_index_config.py  storage.py  task_config.py
ingestion/core/dependencies/: application.py
ingestion/core/management/: cleanup.py  progress.py  status.py
ingestion/core/pipeline/: base_task.py  service_registry.py  tracker.py
ingestion/docs/: ARCHITECTURE.md
ingestion/flow/: video_processing.py
ingestion/prefect_agent/: README.md  script_code.sh
ingestion/prefect_agent/service_asr/: .env.example  pyproject.toml
ingestion/prefect_agent/service_autoshot/: .env.example
ingestion/prefect_agent/service_image_embedding/: .env.example
ingestion/prefect_agent/service_llm/: .env.example  Dockerfile  schema.py
ingestion/prefect_agent/service_text_embedding/: .env.example  main.py
ingestion/prefect_agent/shared/: service.py
ingestion/task/: __init__.py
ingestion/task/asr_task/: main.py
ingestion/task/autoshot_task/: main.py
ingestion/task/common/: util.py
ingestion/task/image_embedding/: main.py
ingestion/task/image_processing/: main.py  util.py
ingestion/task/llm_image_caption/: main.py  util.py
ingestion/task/llm_segment_caption/: main.py  util.py
ingestion/task/milvus_persist_task/: main.py
ingestion/task/text_embedding/: main.py
ingestion/task/video_proc/: main.py  util.py
ingestion/test/: postgres.ipynb  python_gen.ipynb  test_minio.ipynb  test_server_api.py  test_video_encode.ipynb  util.ipynb
ingestion/test/prefect_agent_live/: conftest.py  test_asr_live.py  test_autoshot_live.py  test_image_embedding_live.py  test_llm_live.py  test_text_embedding_live.py
ingestion/test/prefect_agent_live_ingestion/: conftest.py  test_upload_live.py
triton/: Dockerfile  docker-compose.yaml  pyproject.toml
triton/model_repository/asr/: config.pbtxt
triton/model_repository/autoshot/: config.pbtxt
triton/model_repository/te/: config.pbtxt
video_pipeline/: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  docker-compose.yaml  main.py  prefect.yaml  pyproject.toml
video_pipeline/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yaml
video_pipeline/notebooks/: database.ipynb  qdrant_client.ipynb  test.ipynb  trigger_concurrent.py
video_pipeline/scripts/: prefect-init.poc.sh  prefect-init.sh
videodeepsearch/: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
videodeepsearch/agent/: README.md  agent_as_tool.py  base.py  custom.py  definition.py  orc_events.py  orc_helper.py  orc_prompt.py  orc_service.py  prompt.py  workflow.py
videodeepsearch/agent/context/: management.py  orc_context.py  worker_context.py
videodeepsearch/agent/state/: __init__.py  full_orc_state_tool.py  full_orchestration.py  small_worker_state.py  state_management.py  sub_orc_state_tool.py  sub_orchestration.py
videodeepsearch/agent/worker/: __init__.py  custom.py
videodeepsearch/api/: health.py  stream.py
videodeepsearch/code_env/: executor.py
videodeepsearch/config/: settings.yaml
videodeepsearch/core/: app_state.py  dependencies.py  lifespan.py
videodeepsearch/core/config/: client_config.py  llm_config.py
videodeepsearch/notebooks/: note2.txt  print_agno.py  test_agent_run.ipynb  test_function.ipynb  test_qa_generator.ipynb  test_team_run.ipynb  thinking_model.ipynb
videodeepsearch/src/videodeepsearch/: __init__.py
videodeepsearch/test/: agent_versioning.py  genai.ipynb  test_versioning.py  worker_agent_prompt_examples.md
videodeepsearch/test/notebooks/: mlflow_dataset.ipynb  note.txt  note3.txt  note4.txt  test_qa_generator.ipynb  test_trace.ipynb
videodeepsearch/test/test_agent_wf/: agents.py  context.json  event.py  tools.py
videodeepsearch/test/test_client/: client.py  event_handler.py  main.py  session.py  tools.txt
videodeepsearch/test/test_client_agno_agi/: client.py  event_handler.py  main.py  session.py
videodeepsearch/test/test_client_llama_index/: client.py  event_handler.py  main.py
videodeepsearch/test/test_notebook/: genai.ipynb  minio.ipynb  test_app.py  test_end_to_end_workflow.ipynb  test_small_worker_agent.ipynb  test_tools.ipynb  test_wf_end2end.ipynb  test_workflow.py
videodeepsearch/test/test_notebook2/: test_agent.ipynb
videodeepsearch/test/test_notebook2_llama_index/: test_milvus.ipynb  test_sql.ipynb  test_tool.ipynb  test_tool_func.ipynb
videodeepsearch/test/test_notebook_agno/: print_agno.py  test_agent_run.ipynb  test_function.ipynb
videodeepsearch/test/test_notebook_llama_index/: genai.ipynb  test_agent2.py  test_stream.py  test_tools.ipynb  test_type.ipynb
videodeepsearch/test/test_toolkit/: test_kg_graph.py  test_llm.py  test_video_metadata.py
videodeepsearch/test/test_toolkit_agno/: test_kg_graph.py  test_ocr.py  test_utility_toolkit.py
videodeepsearch/tools/: helpers.py
videodeepsearch/tools/base/: custom.py  factory.py  registry.py  schema.py  types.py
videodeepsearch/validate/: mlflow_cost_logger.py  validate.py
(+422 files in other folders)
