[project]
name = "backend"
version = "0.1.0"
description = "Backend API services for Agentic Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "fastapi[standard]>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "google-auth>=2.40.3",
    "ipykernel>=6.30.1",
    "jwt>=1.4.0",
    "llama-index>=0.12.42",
    "llama-index-core>=0.12.42",
    "minio>=7.2.18",
    "motor>=3.7.1",
    "moviepy>=2.2.1",
    "netifaces",
    "opencv-python>=4.12.0.88",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-socketio>=5.13.0",
    "redis>=6.4.0",
    "uvicorn[standard]>=0.35.0",
    "werkzeug>=3.1.3",
]
