[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "minio>=7.2.18",
    "opencv-python>=4.12.0.88",
    "prefect>=3.4.23",
    "pymilvus>=2.6.2",
    "python-consul2>=0.1.5",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
    "tqdm",
    "prefect",
]
