[project]
name = "triton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "chunkformer>=0.1.1",
    "moviepy>=2.2.1",
    "opencv-python>=4.13.0.90",
    "pydantic>=2.12.5",
    "torch>=2.0.0",
    "torchaudio>=2.0.1",
    "torchvision>=0.15.1",
    "transformers>=5.0.0",
]
